--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,43 @@
         'bootstrap_overrides',
         'bootstrap',
         'common';
+
+/* universal */
+
+body {
+    
+}
+  
+section {
+    overflow: auto;
+}
+  
+textarea {
+    resize: vertical;
+}
+  
+.center {
+    text-align: center;
+}
+  
+* {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+  
+  /* typography */
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color:green;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  &:hover {
+    color:#648880;
+    text-decoration: none;
+  }
+}
