--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,16 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Scrumform
+    %title Boilerplate
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
-    = yield
+    = render 'layouts/header'
+    .container
+      - if notice
+        .alert.alert-info= notice
+      - if alert
+        .alert.alert-warning= alert
+      = yield
