--- a/app/views/scrums/show.html.haml
+++ b/app/views/scrums/show.html.haml
@@ -1,3 +1,3 @@
 !!!
-%h1 My Journal
+=render partial: "scrumDate",locals: {scrum: Scrum.new}
 =render partial: "scrumDetails",locals: {scrum: Scrum.new}
