--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import 'theme',
         'bootstrap_overrides',
         'bootstrap',
-        'common';
+        'common',
+        url("scrums.css");
 
 /* universal */
 
