--- a/app/views/scrums/_scrumDate.html.haml
+++ b/app/views/scrums/_scrumDate.html.haml
@@ -1,9 +1,8 @@
 !!!
-%h2 My Journal
-= form_for scrum do |scrum|
-  .form-group
-    = scrum.label :check_in
-    %br/
-    = scrum.date_field :date
-  .form-group
-    = scrum.submit "Submit"
+%html
+  %h3 My Journal
+  = form_for(scrum, url: scrum_path, method: :get) do |scrum|
+    .form-group
+      = scrum.date_field :date, value: date
+    .form-group
+      = scrum.submit "Submit"
