--- a/app/views/scrums/_scrumDetails.html.haml
+++ b/app/views/scrums/_scrumDetails.html.haml
@@ -1,17 +1,21 @@
 !!!
-= form_for scrum do |scrum|
-  .form-group
-    = scrum.label :What_did_i_do_yesterday?
-    %br/
-    = scrum.text_area :yesterday, class: "form-control"
+%html
+  /%textarea#txtarea{:cols => "40", :name => "person[description]", :rows => "3"}
+  
+  = form_for(scrum, url: create_scrum_path, method: :post) do |scrum|
     .form-group
-    = scrum.label :Any_blockers?
-    %br/
-    = scrum.text_area :blockers, class: "form-control"
+      = scrum.label :What_did_i_do_yesterday?
+      .autoExpand
+        = scrum.text_area :yesterday, class: "form-control"
     .form-group
-    = scrum.label :What_will_i_do_today?
-    %br/
-    = scrum.text_area :today, class: "form-control"
-    %br/
-  .form-group
-    = scrum.submit "Submit"
+      = scrum.label :Any_blockers?
+      .autoExpand
+        = scrum.text_area :blockers, class: "form-control"
+    .form-group
+      = scrum.label :What_will_i_do_today?
+      .autoExpand
+        = scrum.text_area :today, class: "form-control"
+      %br/
+    = scrum.hidden_field :date, value:date
+    .form-group
+      = scrum.submit "Submit"
