The form has been made auto expandable

--- a/app/assets/stylesheets/scrums.scss
+++ b/app/assets/stylesheets/scrums.scss
@@ -1,9 +1,15 @@
 // Place all the styles related to the Scrums controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#txtarea {
-  padding-top:10px;
-  padding-bottom:5px;
-  width:100%;
-  display:block;
+.form-group {
+  font-size: 1rem;
+}
+textarea{  
+  display: block;
+  box-sizing: padding-box;
+  overflow: hidden;
+  padding: 0.5% 1%;
+  width: 100%;
+  font-size: 1rem;
+  box-shadow: 2px 2px 8px rgba(black, .3);
 }
