--- a/app/views/scrums/_scrumDate.html.haml
+++ b/app/views/scrums/_scrumDate.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %h3 My Journal
-  = form_for(scrum, url: scrum_path, method: :get) do |scrum|
+  = form_for(scrum, url: scrum_path, method: :get, remote: true) do |scrum|
     .form-group
       = scrum.date_field :date, value: date
     .form-group
