Datepicker sent as ajax to render the form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,9 @@
         'bootstrap_overrides',
         'bootstrap',
         'common',
-        url("scrums.css");
-
+        url("scrums.css"),
+        'jquery-ui/datepicker';
+ 
 /* universal */
 
 body {
