--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    -# %script{:src => "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js", :type => "text/javascript"}
     %title Scrumform
     = csrf_meta_tags
     = csp_meta_tag
