--- a/app/views/scrums/show.html.haml
+++ b/app/views/scrums/show.html.haml
@@ -1,7 +1,15 @@
 !!!
 %html
-  =render partial: "scrumDate",locals: {scrum: Scrum.new, date: @date}
-  - if @purpose == "new"
-    =render partial: "scrumDetails",locals: {scrum: Scrum.new, date: @date}
-  - elsif @purpose == "edit"
-    =render partial: "scrumDetails",locals: {scrum: @scrum}
+  %h3 My Journal
+  -# = form_for @scrum, url: scrum_path, method: :post, remote: true, html: { id: "dateform" } do |scrum|
+  -#   .form-group
+  -#     = scrum.text_field :date, value: @date, id: "datepick"
+  
+  = form_for @scrum, url: scrum_path, method: :get, remote: true, html: { id: "dateform" } do |scrum|
+    .form-group
+      = scrum.text_field :date, value: @date, id: "datepick"
+  
+  -# - if @purpose == "new"
+  -#   =render partial: "scrumDetails",locals: {scrum: Scrum.new, date: @date}
+  -# - elsif @purpose == "edit"
+  -#   =render partial: "scrumDetails",locals: {scrum: @scrum}
