--- a/app/views/scrums/show.js.erb
+++ b/app/views/scrums/show.js.erb
@@ -1,1 +1,2 @@
-$('#dateform').append("<%= j render 'scrumDetails' %>");
+$('#scrumform').replaceWith("<%= j render partial: "scrumDetails", locals: {date: @date, scrum: @scrum, action: @action} %>");
+<%# $('textarea.autoExpand').html("someText"); %>
