--- a/app/assets/stylesheets/scrums.scss
+++ b/app/assets/stylesheets/scrums.scss
@@ -13,5 +13,8 @@ textarea{
   font-size: 1rem;
   box-shadow: 2px 2px 8px rgba(black, .3);
 }
+#ui-datepicker-div{
+  background: white;
+}
 #datepick{
 }
