Update working perfectly with saved values shown

--- a/app/views/scrums/show.html.haml
+++ b/app/views/scrums/show.html.haml
@@ -6,4 +6,4 @@
       = scrum.text_field :date, value: @date, id: "datepick"
 
   - if @first_time == "yes"
-    =render partial: "scrumDetails",locals: {date: @date, scrum: @scrum, action: @action}
+    =render partial: "scrumDetails",locals: {date: @date, scrum: @scrum, sample:@sample}
