--- a/app/views/scrums/_scrumDetails.html.haml
+++ b/app/views/scrums/_scrumDetails.html.haml
@@ -1,32 +1,15 @@
 !!!
 %html
-  =date
-  - if action == "create"
-    = form_for(scrum, url: create_scrum_path, remote: true, html: { id: "scrumform" }) do |scrum|
-      .form-group
-        = scrum.label :What_did_i_do_yesterday?
-        %textarea.autoExpand{"minrows" => "3", :name => "scrum[yesterday]", :rows => "3"}
-      .form-group
-        = scrum.label :Any_blockers?
-        %textarea.autoExpand{"minrows" => "3", :name => "scrum[blockers]", :rows => "3"}
-      .form-group
-        = scrum.label :What_will_i_do_today?
-        %textarea.autoExpand{"minrows" => "3", :name => "scrum[today]", :rows => "3"}
-      = scrum.hidden_field :date, value: date
-      .form-group
-        = scrum.submit "Submit"
-
-  - else
-    = form_for(scrum, url: update_scrum_path(scrum), remote: true, html: { id: "scrumform" }) do |scrum|
-      .form-group
-        = scrum.label :What_did_i_do_yesterday?
-        %textarea.autoExpand{"minrows" => "3", :name => "scrum[yesterday]", :rows => "3", :value => "scrum[yesterday]"}
-      .form-group
-        = scrum.label :Any_blockers?
-        %textarea.autoExpand{"minrows" => "3", :name => "scrum[blockers]", :rows => "3", :value => "scrum[blockers]"}
-      .form-group
-        = scrum.label :What_will_i_do_today?
-        %textarea.autoExpand{"minrows" => "3", :name => "scrum[today]", :rows => "3", :value => "scrum[today]"}
-      = scrum.hidden_field :date, value: date
-      .form-group
-        = scrum.submit "Submit"
+  = form_for(scrum, url: scrum.new_record? ? create_scrum_path : update_scrum_path(scrum), remote: true, html: { id: "scrumform" }) do |s|
+    .form-group
+      = s.label :What_did_i_do_yesterday?
+      %textarea.autoExpand{"minrows" => "3", :name => "scrum[yesterday]", :rows => "3"} #{scrum.yesterday}
+    .form-group
+      = s.label :Any_blockers?
+      %textarea.autoExpand{"minrows" => "3", :name => "scrum[blockers]", :rows => "3"} #{scrum.blockers}
+    .form-group
+      = s.label :What_will_i_do_today?
+      %textarea.autoExpand{"minrows" => "3", :name => "scrum[today]", :rows => "3"} #{scrum.today}
+    = s.hidden_field :date, value: date
+    .form-group
+      = s.submit "Submit"
