--- a/app/views/scrums/show.js.erb
+++ b/app/views/scrums/show.js.erb
@@ -1,2 +1,2 @@
-$('#scrumform').replaceWith("<%= j render partial: "scrumDetails", locals: {date: @date, scrum: @scrum, action: @action} %>");
+$('#scrumform').replaceWith("<%= j render partial: "scrumDetails", locals: {date: @date, scrum: @scrum} %>");
 <%# $('textarea.autoExpand').html("someText"); %>
