--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render 'layouts/header'
+    = render :partial => 'flash_messages', :flash => flash
     .container
       - if notice
         .alert.alert-info= notice
